--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -66,7 +66,7 @@ jobs:
 
     - name: Rename Auto-Update Installer
       shell: pwsh
-      run: Rename-Item ./UpdateFunctionality/bin/Release/net9.0-windows10.0.19041.0/win10-x64/AppPackages/UpdateFunctionality_${{ steps.extractVersion.outputs.version }}.0_Test/UpdateFunctionality_${{ steps.extractVersion.outputs.version }}.0_x64.msix AutoUpdate.msix
+      run: Rename-Item ./bin/Release/net9.0-windows10.0.19041.0/win10-x64/AppPackages/UpdateFunctionality_${{ steps.extractVersion.outputs.version }}.0_Test/UpdateFunctionality_${{ steps.extractVersion.outputs.version }}.0_x64.msix AutoUpdate.msix
 
     - name: Rename Certificate
       shell: pwsh
