--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -82,7 +82,7 @@ jobs:
     - name: Rename Auto-Update Installer
       shell: pwsh
       run: Rename-Item ./bin/Release/net9.0-windows10.0.19041.0/win10-x64/AppPackages/UpdateFunctionality_${{ steps.extractVersion.outputs.version }}.0_Test/UpdateFunctionality_${{ steps.extractVersion.outputs.version }}.0_x64.msix AutoUpdate.msix
-      working-directory: ./UpdateFunctionality/UpdateFunctionality
+      working-directory: ./UpdateFunctionality
       
     - name: Rename Certificate
       shell: pwsh
