--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -44,6 +44,10 @@ jobs:
       run: dotnet publish -c Release -f:net9.0-windows10.0.19041.0 /p:GenerateAppxPackageOnBuild=true /p:AppxPackageSigningEnabled=true /p:PackageCertificateThumbprint=${{ secrets.SIGNING_CERTIFICATE_THUMBPRINT }}
       working-directory: ./UpdateFunctionality
 
+    - name : VerifyPath
+      shell : pwsh
+      run : $PWD
+
     - name : Upload
       uses : actions/upload-artifact@v4
       with :
