--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -46,11 +46,13 @@ jobs:
 
     - name : VerifyPath
       shell : pwsh
-      run : $projectPath = Join-Path -Path $PWD -ChildPath "UpdateFunctionality"
-            $binPath = Join-Path -Path $projectPath -ChildPath "bin\Release"
-            Write-Host "Checking for files under $binPath"
-            Get-ChildItem -Recurse $binPath -Include *.msix, *.cer | ForEach-Object {
-            Write-Host $_.FullName }
+      run : |
+        $projectPath = Join-Path -Path $PWD -ChildPath "UpdateFunctionality"
+        $binPath = Join-Path -Path $projectPath -ChildPath "bin\Release"
+        Write-Host "Checking for files under $binPath"
+        Get-ChildItem -Recurse $binPath -Include *.msix, *.cer | ForEach-Object {
+        Write-Host $_.FullName 
+        }
 
     - name : Upload
       uses : actions/upload-artifact@v4
